# kata_gilded_rose

./: .gitignore  .gitlab-ci.yml  README  README.md
ci/: init_cpp.sh
cpp/: CMakeLists.txt  GildedRose.cc  GildedRose.h  GildedRoseTests.cc  GildedRoseTextTests.cc  GildedRoseUnitTests.cc  Item.h  ItemController.cpp  ItemController.h  README  run-once.sh
